@@ -2,6 +2,8 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
+	* added 'more' and standard more-prompt key mappings to control
+	  behaviour of the message list pager 
 	* added 'hlsearchstyle' option to allow for user CSS styling of the
 	  highlighted text strings when 'hlsearch' is set
 	* added 'linksearch' option to restrict page searches to link text - \U
